kubernetes/overlays/aws/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citizen-portal
  namespace: mis-prod
spec:
  tls:
    - hosts:
        - portal.mis.gov
      secretName: portal-tls
  rules:
    - host: portal.mis.gov
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-active
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-active
                port:
                  number: 80
